--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+/* html {
+    scroll-behavior: smooth;
+} */
+
 nav {
     /* display: flex; */
     /* justify-content: space-around; */
@@ -36,6 +44,8 @@ nav {
 
 nav ul li {
     list-style: none;
+    color: black;
+    color: white;
 }
 
 nav ul {
@@ -55,6 +65,7 @@ nav ul {
     /* text-align: center; */
     background-image: url(images/bg2.jpg);
     background-size: cover;
+    height: 100vh;
     /* background-position: center; */
 }
 
