--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ nav ul {
     background-image: url(images/bg2.jpg);
     background-size: cover;
     height: 100vh;
+    /* width: 100vw; */
     text-align: center;
     padding-top: 15vh;
     line-height: 10vh;
